--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@ steps:
   displayName: 'Copy Nuget packages to staging'
   inputs:
     SourceFolder: .
-    Contents: '**/*.nupkg'
+    Contents: '**.nupkg'
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact'
