Adds building to nuget feed

--- a/build.yaml
+++ b/build.yaml
@@ -31,3 +31,9 @@ steps:
   displayName: 'Publish Artifact'
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
+# Push a project
+- task: NuGetCommand@2
+  inputs:
+    command: 'push'
+    feedsToUse: 'select'
+    vstsFeed: 'InternalNugetFeed'
