--- a/build.yaml
+++ b/build.yaml
@@ -34,6 +34,8 @@ steps:
 # Push a project
 - task: NuGetCommand@2
   inputs:
-    command: 'push'
-    feedsToUse: 'select'
+    command: push
+    feedsToUse: select
     vstsFeed: 'InternalNugetFeed'
+    publishVstsFeed: 'InternalNugetFeed'
+    nuGetFeedType: internal
